+fi, fmtting <middle finger#4600>

--- a/wiki/middle_finger.wikitext
+++ b/wiki/middle_finger.wikitext
@@ -1,8 +1,14 @@
+==English==
 ===Noun===
 
-The [[finger]] between the [[forefinger]] and the [[ring finger]]. This is the longest finger.
+#The [[finger]] between the [[forefinger]] and the [[ring finger]]. This is the longest finger.
 
-===Translations===
+====Translations====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
 *[[Basque]]: [[hatz erdiko]]
 *[[Breton]]: [[biz-bras]] ''m'', [[biz-kreiz]] ''m''
 *Bulgarian: [[среден]] [[пръст]] ''m''
@@ -11,15 +17,23 @@ The [[finger]] between the [[forefinger]] and the [[ring finger]]. This is the l
 *[[Danish]]: [[langfinger]], [[langemand]]
 *[[Dutch]]: [[middelvinger]] ''m''
 *[[Esperanto]]: [[longa fingro]], [[meza fingro]]
+*{{fi}}: [[keskisormi]]
 *French: [[majeur]] ''m'', [[doigt du milieu]] ''m'', [[médius]] ''m''
 *[[Frisian]]: [[middelste finger]]
 *German: [[Mittelfinger]] ''m''
 *Indonesian: [[jari tengah]]
 *[[Interlingua]]: [[digito medie]]
 *Italian: [[medio]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
 *Japanese: [[中指]] (なかゆび, nakayubi)
 *Polish: [[palec]] [[środkowy]] ''m''
 *Portuguese: [[dedo médio]] ''m''
 *Romanian: [[deget mijlociu]] ''n''
 *[[Slovene]]: [[sredinec]] ''m''
 *Spanish: [[dedo de en medio]] ''m'', [[dedo del corazón]] ''m''
+|}
+|}
