/* Translations */  +fi, fmtting <ring finger#4601>

--- a/wiki/ring_finger.wikitext
+++ b/wiki/ring_finger.wikitext
@@ -15,7 +15,12 @@
 *[[third finger]]
 
 
-===Translations===
+====Translations====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
 *[[Basque]]: [[haznagi]]
 *[[Breton]]: [[biz-gwalenn]] ''m''
 *Bulgarian: [[безименен пръст]] ''m''
@@ -24,12 +29,18 @@
 *Danish: [[ringfinger]]
 *Dutch: [[ringvinger]] ''m''
 *[[Esperanto]]: [[ringofingro]]
+*{{fi}}: [[nimetön]]
 *French: [[annulaire]] ''m''
 *[[Frisian]]: [[ringfinger]]
 *German: [[Ringfinger]] ''m''
 *Indonesian: [[jari manis]]
 *[[Interlingua]]: [[digito anular]], [[anular]]
 *Italian: [[anulare]] ''m''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
 *Japanese: [[薬指]] (くすりゆび, kusuriyubi)
 *Korean: [[약지]] [藥指] (yakji)
 *Polish: [[palec]] [[serdeczny]] ''m''
@@ -38,3 +49,5 @@
 *Slovak: [[prstenník]] ''m''
 *Slovene: [[prstanec]] ''m''
 *Spanish: [[dedo anular]] ''m'', [[anular]] ''m''
+|}
+|}
