+fi, fmtting <forefinger#4599>

--- a/wiki/forefinger.wikitext
+++ b/wiki/forefinger.wikitext
@@ -1,6 +1,8 @@
+==English==
 ===Noun===
 
-The first [[finger]] next to the [[thumb]]
+#The first [[finger]] next to the [[thumb]].
+
 ====Synonyms====
 *[[arrow-finger]]
 *[[demonstrator]]
@@ -13,6 +15,11 @@ The first [[finger]] next to the [[thumb]]
 *[[teacher]]
 
 ====Translations====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
 *[[Basque]]: [[hatz erakusle]]
 *[[Breton]]: [[biz-yod]] ''m''
 *[[Bulgarian]]: [[показалец]] ''m''
@@ -21,12 +28,18 @@ The first [[finger]] next to the [[thumb]]
 *[[Danish]]: [[pegefinger]]
 *[[Dutch]]: [[wijsvinger]] ''m''
 *[[Esperanto]]: [[montra fingro]]
+*{{fi}}: [[etusormi]]
 *French: [[index]] ''m''
 *[[Frisian]]: [[foarste finger]], [[wiisfinger]]
 *German: [[Zeigefinger]] ''m''
 *Indonesian: [[jari telunjuk]]
 *[[Interlingua]]: [[digito indice]], [[indice]]
 *Italian: [[indice]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
 *Japanese: [[人差し指]] (ひとさしゆび, hitosashiyubi)
 *[[Polish]]: [[palec]] [[wskazujący]] ''m''
 *Portuguese: [[dedo indicador]] ''m'', [[indicador]] ''m'', [[índice]] ''m'', [[dedo índex]] ''m'', [[índex]] ''m''
@@ -37,3 +50,5 @@ The first [[finger]] next to the [[thumb]]
 *Swedish: [[pekfinger]]
 *[[Turkish]]: [[işaretparmağı]] [-nı]
 *[[Vietnamese]]: [[ngón tay trỏ]]
+|}
+|}
