/* Translations */ <ring finger#4601>

--- a/wiki/ring_finger.wikitext
+++ b/wiki/ring_finger.wikitext
@@ -20,7 +20,6 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--languages from A to I go here-->
 *[[Basque]]: [[haznagi]]
 *[[Breton]]: [[biz-gwalenn]] ''m''
 *Bulgarian: [[безименен пръст]] ''m''
@@ -33,17 +32,16 @@
 *French: [[annulaire]] ''m''
 *[[Frisian]]: [[ringfinger]]
 *German: [[Ringfinger]] ''m''
-*Indonesian: [[jari manis]]
-*[[Interlingua]]: [[digito anular]], [[anular]]
-*Italian: [[anulare]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--languages from J to Z go here-->
+*Indonesian: [[jari manis]]
+*[[Interlingua]]: [[digito anular]], [[anular]]
+*Italian: [[anulare]] ''m''
 *Japanese: [[薬指]] (くすりゆび, kusuriyubi)
 *Korean: [[약지]] [藥指] (yakji)
-*Polish: [[palec]] [[serdeczny]] ''m''
+*Polish: [[palec serdeczny]] ''m''
 *Portuguese: [[dedo anular]] ''m'', [[anular]] ''m''
 *Romanian: [[inelar]] ''m''
 *Slovak: [[prstenník]] ''m''
