+fi, fmtting <little finger#4602>

--- a/wiki/little_finger.wikitext
+++ b/wiki/little_finger.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Noun===
-'''little finger''' '''little fingers'''
+'''little finger''' (plural: '''little fingers''')
 # the outermost and smallest [[finger]] of the hand, next to the [[ring finger]], farthest from the [[thumb]]
 ====Synonyms====
 *[[auricular]]
@@ -11,6 +11,11 @@
 *[[pinkie]]
 
 ====Translations====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
 *[[Basque]]: [[atxiki]]
 *[[Breton]]: [[biz-bihan]] ''m''
 *[[Catalan]]: [[dit petit]] ''m''
@@ -18,11 +23,17 @@
 *Danish: [[lillefinger]]
 *Dutch: [[pink]] ''m''
 *[[Esperanto]]: [[malgranda fingro]]
+*{{fi}}: [[pikkusormi]]
 *French: [[petit doigt]] ''m'', [[auriculaire]] ''m''
 *[[Frisian]]: [[pink]]
 *German: [[kleine Finger]] ''m''
 *Indonesian: [[jari kelingking]]
 *[[Interlingua]]: [[digito auricular]], [[auricular]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
 *Japanese: [[小指]] (こゆび, koyubi)
 *Korean: [[새끼손가락]] (saekkisongarak)
 *[[Pitjantjatjara]]: [[maṟa ngaḻi]]
@@ -34,3 +45,5 @@
 *Spanish: [[dedo meñique]] ''m''
 *Swedish: [[lillfinger]]
 *Turkish: [[serçeparmak]]
+|}
+|}
