--- a/wiki/forefinger.wikitext
+++ b/wiki/forefinger.wikitext
@@ -19,14 +19,13 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--languages from A to I go here-->
 *[[Basque]]: [[hatz erakusle]]
 *[[Breton]]: [[biz-yod]] ''m''
-*[[Bulgarian]]: [[показалец]] ''m''
+*Bulgarian: [[показалец]] ''m''
 *[[Catalan]]: [[índex]] ''m''
 *Chinese: [[食指]] (shizhi)
-*[[Danish]]: [[pegefinger]]
-*[[Dutch]]: [[wijsvinger]] ''m''
+*Danish: [[pegefinger]]
+*Dutch: [[wijsvinger]] ''m''
 *[[Esperanto]]: [[montra fingro]]
 *{{fi}}: [[etusormi]]
 *French: [[index]] ''m''
@@ -34,21 +33,20 @@
 *German: [[Zeigefinger]] ''m''
 *Indonesian: [[jari telunjuk]]
 *[[Interlingua]]: [[digito indice]], [[indice]]
-*Italian: [[indice]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--languages from J to Z go here-->
+*Italian: [[indice]]
 *Japanese: [[人差し指]] (ひとさしゆび, hitosashiyubi)
-*[[Polish]]: [[palec]] [[wskazujący]] ''m''
+*Polish: [[palec wskazujący]] ''m''
 *Portuguese: [[dedo indicador]] ''m'', [[indicador]] ''m'', [[índice]] ''m'', [[dedo índex]] ''m'', [[índex]] ''m''
-*[[Romanian]]: [[deget arătător]] ''n'', [[arătător]] ''n''
-*[[Slovak]]: [[ukazovák]] ''m''
-*[[Slovene]]: [[kazalec]] ''m''
+*Romanian: [[deget arătător]] ''n'', [[arătător]] ''n''
+*Slovak: [[ukazovák]] ''m''
+*Slovene: [[kazalec]] ''m''
 *Spanish: [[índice]] ''m''
 *Swedish: [[pekfinger]]
-*[[Turkish]]: [[işaretparmağı]] [-nı]
-*[[Vietnamese]]: [[ngón tay trỏ]]
+*Turkish: [[işaretparmağı]] [-nı]
+*Vietnamese: [[ngón tay trỏ]]
 |}
 |}
