/* Translations */ <little finger#4602>

--- a/wiki/little_finger.wikitext
+++ b/wiki/little_finger.wikitext
@@ -15,7 +15,6 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--languages from A to I go here-->
 *[[Basque]]: [[atxiki]]
 *[[Breton]]: [[biz-bihan]] ''m''
 *[[Catalan]]: [[dit petit]] ''m''
@@ -33,11 +32,10 @@
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--languages from J to Z go here-->
 *Japanese: [[小指]] (こゆび, koyubi)
 *Korean: [[새끼손가락]] (saekkisongarak)
 *[[Pitjantjatjara]]: [[maṟa ngaḻi]]
-*Polish: [[palec]] [[mały]] ''m''
+*Polish: [[palec mały]] ''m''
 *Portuguese: [[dedo mínimo]] ''m'', [[mínimo]] ''m'', [[dedo auricular]] ''m''
 *Romanian: [[deget mic]] ''n''
 *Slovak: [[malíček]] ''m''
