+fi, +noun <lodge#59238>

--- a/wiki/lodge.wikitext
+++ b/wiki/lodge.wikitext
@@ -10,8 +10,41 @@
 *[[lodger]]
 *[[lodging]]<!--noun-->
 ====Translation====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*{{fi}}: [[tehdä]] [[valitus]], [[majailla]], [[asua]], [[majoittaa]], [[tarttua]], [[juuttua]], [[jäädä]] [[muistiin]]
 *{{fr}}: [[demeurer]] [[:fr:demeurer|°]]
 *{{hu}}: [[lakik]] [[:hu:lakik|°]]
 *{{de}}: [[wohnen]] [[:de:wohnen|°]]
 *{{it}}: [[alloggiare]] [[:it:alloggiare|°]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
 *{{es}}: [[vivir]] [[:es:vivir|°]]
+|}
+|}
+
+===Noun===
+'''lodge'''
+#A group of [[freemason]]s, the smallest organizational structure of freemasons.
+
+====Translations====
+'''in freemason context'''
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*{{fi}}: [[loosi]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+|}
+|}
