--- a/wiki/function.wikitext
+++ b/wiki/function.wikitext
@@ -22,6 +22,7 @@ IPA: /ˈfʌŋk.ʃən/
 *French: [[fonction]] ''f'' (1, 2)
 *German: [[Funktion]] ''f'' (1, 2, 3)
 *Hebrew: [[פונקציה]] ''f'' (1, 2, 3)
+*Hungarian: [[funkció]] ''f'' (1, 2, 3)
 *[[Interlingua]]: function (1, 2, 3)
 *{{ga}}: [[feidhm]]
 *Italian: [[funzione]] ''f'' (1)
