fixed typo in cross reference to pl <beryllium#29996>

--- a/wiki/beryllium.wikitext
+++ b/wiki/beryllium.wikitext
@@ -94,4 +94,4 @@ For etymology and more information refer to: http://elements.vanderkrogt.net/ele
 (A lot of the translations were taken from that site with permission from the author)
 
 [[Category:Chemical elements]]
-[[pl:Berylium]]
+[[pl:Beryllium]]
