minor fmt; what is this "wuv" thing that is linked to "love"?  Either "wuv" is a real word, in which case link to that, or it is not, in which case delete this definition <♥#36788>

--- a/wiki/%E2%99%A5.wikitext
+++ b/wiki/%E2%99%A5.wikitext
@@ -3,12 +3,30 @@
 '''♥'''
 
 # Symbol for [[hearts]].
-# International symbol for [[love|wuv]].
-# Stylistic substitution for the word ''love''.
-#:''"I♥NY" = "I love [[w:New York, New York|New York]]"''
+<!--# International symbol for [[love|wuv]].-->
+# Stylistic substitution for the word ''love'', as in ''I♥NY'' (I love [[New York]]).
 
 ===See also===
-* [[&#9824;]] [[&#9829;]] [[&#9830;]] [[&#9827;]]
-* [[&#9828;]] [[&#9825;]] [[&#9826;]]  [[&#9831;]]
-* [[spades]] - [[clubs]] - [[hearts]] - [[diamonds]]
-* [[♔]] [[♕]] [[♖]] [[♗]] [[♘]] [[♙]]  [[♚]] [[♛]] [[♜]] [[♝]] [[♞]] [[♟]]
+*[[&#9824;]]
+*[[&#9830;]]
+*[[&#9827;]]
+*[[&#9828;]]
+*[[&#9825;]]
+*[[&#9826;]]
+*[[&#9831;]]
+*[[clubs]]
+*[[diamonds]]
+*[[hearts]]
+*[[spades]]
+*[[♔]]
+*[[♕]]
+*[[♖]]
+*[[♗]]
+*[[♘]]
+*[[♙]]
+*[[♚]]
+*[[♛]]
+*[[♜]]
+*[[♝]]
+*[[♞]]
+*[[♟]]
