--- a/wiki/%E2%99%A0.wikitext
+++ b/wiki/%E2%99%A0.wikitext
@@ -2,13 +2,31 @@
 ====Symbol====
 '''♠'''
 
-# Symbol on a playing cards for [[spades]].
+#[[Spades]].
 
 ===See also===
-* <big>[[&#9824;]] [[&#9829;]] [[&#9830;]] [[&#9827;]]</big>
-* [[spades]] - [[hearts]] - [[diamonds]] - [[clubs]] (in the same order as above)
-* [[&#9828;]] [[&#9825;]] [[&#9826;]]  [[&#9831;]]
-* [[♔]] [[♕]] [[♖]] [[♗]] [[♘]] [[♙]]  [[♚]] [[♛]] [[♜]] [[♝]] [[♞]] [[♟]]
-
+*[[&#9829;]]
+*[[&#9830;]]
+*[[&#9827;]]
+*[[clubs]]
+*[[diamonds]]
+*[[hearts]]
+*[[spades]]
+*[[&#9828;]]
+*[[&#9825;]]
+*[[&#9826;]]
+*[[&#9831;]]
+*[[♔]]
+*[[♕]]
+*[[♖]]
+*[[♗]]
+*[[♘]]
+*[[♙]]
+*[[♚]]
+*[[♛]]
+*[[♜]]
+*[[♝]]
+*[[♞]]
+*[[♟]]
 
 [[zh:♠]]
