--- a/wiki/%E2%99%A5.wikitext
+++ b/wiki/%E2%99%A5.wikitext
@@ -2,9 +2,9 @@
 ====Symbol====
 '''♥'''
 
-# Symbol for [[hearts]].
+#(''card games'') [[Hearts]].
 <!--# International symbol for [[love|wuv]].-->
-# Stylistic substitution for the word ''love'', as in ''I♥NY'' (I love [[New York]]).
+# Stylistic substitution for the word ''love'', as in "I♥NY" (I love [[New York]]).
 
 ===See also===
 *[[&#9824;]]
