--- a/wiki/%E2%99%A6.wikitext
+++ b/wiki/%E2%99%A6.wikitext
@@ -2,10 +2,29 @@
 ====Symbol====
 '''♦'''
 
-# symbol for [[diamonds]]
+#(''card games'') [[Diamonds]].
 
 ===See also===
-* [[&#9824;]] [[&#9829;]] [[&#9830;]] [[&#9827;]]
-* [[&#9828;]] [[&#9825;]] [[&#9826;]]  [[&#9831;]]
-* [[spades]] - [[clubs]] - [[hearts]] - [[diamonds]]
-* [[♔]] [[♕]] [[♖]] [[♗]] [[♘]] [[♙]]  [[♚]] [[♛]] [[♜]] [[♝]] [[♞]] [[♟]]
+*[[&#9824;]]
+*[[&#9829;]]
+*[[&#9827;]]
+*[[&#9828;]]
+*[[&#9825;]]
+*[[&#9826;]]
+*[[&#9831;]]
+*[[clubs]]
+*[[diamonds]]
+*[[hearts]]
+*[[spades]]
+*[[♔]]
+*[[♕]]
+*[[♖]]
+*[[♗]]
+*[[♘]]
+*[[♙]]
+*[[♚]]
+*[[♛]]
+*[[♜]]
+*[[♝]]
+*[[♞]]
+*[[♟]]
