--- a/wiki/%E2%99%A3.wikitext
+++ b/wiki/%E2%99%A3.wikitext
@@ -1,11 +1,30 @@
 ==Translingual==
 ====Symbol====
 
-# Symbol on [[playing cards]] for [[club]]s
+#(''card games'') [[clubs]]
 
 
 ===See also===
-* [[&#9824;]] [[&#9829;]] [[&#9830;]] [[&#9827;]]
-* [[&#9828;]] [[&#9825;]] [[&#9826;]]  [[&#9831;]]
-* [[spades]] - [[clubs]] - [[hearts]] - [[diamonds]]
-* [[♔]] [[♕]] [[♖]] [[♗]] [[♘]] [[♙]]  [[♚]] [[♛]] [[♜]] [[♝]] [[♞]] [[♟]]
+*[[&#9824;]]
+*[[&#9829;]]
+*[[&#9830;]]
+*[[&#9828;]]
+*[[&#9825;]]
+*[[&#9826;]]
+*[[&#9831;]]
+*[[clubs]]
+*[[diamonds]]
+*[[hearts]]
+*[[spades]]
+*[[♔]]
+*[[♕]]
+*[[♖]]
+*[[♗]]
+*[[♘]]
+*[[♙]]
+*[[♚]]
+*[[♛]]
+*[[♜]]
+*[[♝]]
+*[[♞]]
+*[[♟]]
