fmt <round the twist#66711>

--- a/wiki/round_the_twist.wikitext
+++ b/wiki/round_the_twist.wikitext
@@ -1,3 +1,6 @@
 ==English==
 ===Adjective===
-#''Slang''. [[mad]] or [[eccentric]]
+'''round the twist''' (''[[comparative]]'' '''more round the twist''', ''[[superlative]]'' '''most round the twist''')
+
+#(''slang'') [[Mad]].
+#(''slang'') [[Eccentric]].
