removed cap from "turpentine"; moved note into def (NB: the plural of "medium" is "media" in this case) <Venice turpentine#66693>

--- a/wiki/Venice_turpentine.wikitext
+++ b/wiki/Venice_turpentine.wikitext
@@ -1,6 +1,5 @@
 ==English==
 ===Noun===
-'''Venice Turpentine'''
-# A thick substance used as a component in artists' oil painting to create glossy, translucent [[glaze]]s 
-====Note====
-*Its use has been replaced by [[synthetic]] glaze mediums such as liquin.
+'''Venice turpentine''' (''[[uncountable]]'')
+
+# A thick substance used as a component in artists' oil painting to create glossy, [[translucent]] [[glaze]]s, nowadays largely replaced by synthetic substitutes.
