--- a/wiki/opaque.wikitext
+++ b/wiki/opaque.wikitext
@@ -8,7 +8,7 @@
 *[[clear]], [[see-through]], [[transparent]]
 
 ====Translations====
-*French: opaque
+*French: opaque ''m and f''
 *Italian: [[opaco]] ''m'', opaca ''f''
 
 ===See also===
