+fr: entry; please add extra def(s) <opaque#66724>

--- a/wiki/opaque.wikitext
+++ b/wiki/opaque.wikitext
@@ -5,11 +5,32 @@
 #Not allowing light to pass through.
 
 ====Antonyms====
-*[[clear]], [[see-through]], [[transparent]]
+*(''not allowing light to pass through''): [[clear]], [[see-through]], [[transparent]]
 
 ====Translations====
+
+'''not allowing light to pass through'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
 *French: opaque ''m and f''
 *Italian: [[opaco]] ''m'', opaca ''f''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
 
 ===See also===
 *[[translucent]]
+
+----
+==French==
+===Adjective===
+'''opaque''' ''m and f'' (''m and f plural'' '''opaques''')
+
+#opaque
