def - this is just a plural, isn't it? <quanta#66671>

--- a/wiki/quanta.wikitext
+++ b/wiki/quanta.wikitext
@@ -1,6 +1,8 @@
 ==English==
 ===Noun===
-#Properties defineable with [[number]]s.  A [[quantity]].
+'''quanta'''
+
+#Plural of '''[[quantum]]'''.
 
 ====Antonym====
 *[[qualia]]
