def, +it:; please do not add translations before definitions if possible; see also <Snow White#66656>

--- a/wiki/Snow_White.wikitext
+++ b/wiki/Snow_White.wikitext
@@ -1,3 +1,13 @@
-====Translations====
+==English==
+===Proper noun===
+'''Snow White'''
 
+#A [[fictional]] [[character]] in the [[fairy tale]] ''[[w:Snow-White and Rose-Red|Snow-White and Rose-Red]]'' by the [[w:Brothers Grimm|Brothers Grimm]].
+
+====Translations====
 *German: [[Schneewittchen]]
+*Italian: [[Biancaneve]]
+
+===See also===
+*[[snow-white]]
+*[[w:Snow White|Wikipedia article on Snow White]]
