--- a/wiki/Eeyore.wikitext
+++ b/wiki/Eeyore.wikitext
@@ -10,6 +10,7 @@
 
 ====Translations====
 *Dutch: [[iejoor]] ''m''<!--is this correctly spelled with a lower-case 'i'?-->
+*Finnish: [[Ihaa]]
 
 ====See also====
 *[[w:Eeyore|Wikipedia article on Eeyore]]
