+fi <Snow White#66656>

--- a/wiki/Snow_White.wikitext
+++ b/wiki/Snow_White.wikitext
@@ -5,6 +5,7 @@
 #A [[fictional]] [[character]] in the [[fairy tale]] ''[[w:Snow-White and Rose-Red|Snow-White and Rose-Red]]'' by the [[w:Brothers Grimm|Brothers Grimm]].
 
 ====Translations====
+*Finnish: [[Lumikki]]
 *German: [[Schneewittchen]]
 *Italian: [[Biancaneve]]
 
