--- a/wiki/superman.wikitext
+++ b/wiki/superman.wikitext
@@ -4,8 +4,14 @@
 
 #Name of a [[comic book|comic-book]] character with superhuman powers<!--note that "comic-book" is hyphenated here as it is a noun being used to modify another; "comic" refers to the book, not to the character-->
 
+====Translations====
+*Finnish: [[Teräsmies]]
+
 ===Noun===
 #a superior type of man, described by Nietzche as the next step in human evolution; [[übermensch]]
+
+====Translations====
+*Finnish: [[yli-ihminen]]
 
 ===See also===
 *[[w:Superman|Wikipedia article on Superman, the comic-book character]]
