+fi <Little Red Riding Hood#66653>

--- a/wiki/Little_Red_Riding_Hood.wikitext
+++ b/wiki/Little_Red_Riding_Hood.wikitext
@@ -4,4 +4,5 @@
 # ''Fairy Tale.'' The young girl in the well-known fairly tale of the same name.
 
 ====Translations====
+*Finnish: [[Punahilkka]]
 *German: [[Rotkäppchen]]
