+fi <Mickey Mouse#64483>

--- a/wiki/Mickey_Mouse.wikitext
+++ b/wiki/Mickey_Mouse.wikitext
@@ -9,6 +9,7 @@
 *Danish: Mickey Mouse
 *Dutch: Mickey Mouse
 *[[Esperanto]]: Mickey Mouse
+*Finnish: [[Mikki Hiiri]]
 *French: Mickey Mouse
 *German: [[Mickey Maus]]
 *Hebrew: [[מיקי מאוס]]
