--- a/wiki/quantum.wikitext
+++ b/wiki/quantum.wikitext
@@ -7,6 +7,9 @@
 #:''The photon is the quantum of light.''
 #A property defineable as a number.  A [[quantity]].
 
+====Translations====
+*Finnish: [[kvantti]] (1), [[suure]] (2)
+
 ----
 ==Latin==
 ===Adjective===
