--- a/wiki/permanent.wikitext
+++ b/wiki/permanent.wikitext
@@ -1,3 +1,6 @@
 ==English==
 ===Adjective===
 #Without end, [[eternal]], not [[temporary]].
+
+====Translations====
+*Finnish: [[pysyvä]] (1), [[ikuinen]] (1), [[jatkuva]] (1), [[kestävä]] (1)
