more related&derived, synonyms <ikä#53305>

--- a/wiki/ik%C3%A4.wikitext
+++ b/wiki/ik%C3%A4.wikitext
@@ -5,14 +5,20 @@
 
 ===Noun===
 '''ikä'''
+
 #[[age]]
 #[[life]]
 #[[lifetime]]
 
+====Synonyms====
+*(''life'') [[elämä]]
+*(''lifetime'') [[elinikä]]
+
 ===Derived terms===
-*[[elinikä]]
+*[[alaikäinen]]
 *[[ikuinen]]
 *[[ikäinen]]
+*[[-ikäinen]]
 *[[ikäloppu]]
 *[[ikänäkö]]
 *[[ikäraja]]
@@ -20,7 +26,9 @@
 *[[iäkäs]]
 *[[iätön]]
 *[[keski-ikä]]
+*[[yli-ikäinen]]
 
 ===Related terms===
+*[[iankaikkinen]]
 *[[iki-]]
 *[[iäti]]
