+fi; format, dewikify <constant#35186>

--- a/wiki/constant.wikitext
+++ b/wiki/constant.wikitext
@@ -7,10 +7,10 @@
 #(''Algebra'') having a fixed [[value]]
 
 ====Translations====
-
-*[[French]]: constant ''m'', [[constante]] ''f''
-*[[German]]: [[konstant]]
-*[[Italian]]: [[costante]] ''m'' & ''f''
+*Finnish: [[pysyvä]] (1), [[muuttumaton]] (1), [[vakio-]] (2, ''in compounds'')
+*French: constant ''m'', [[constante]] ''f''
+*German: [[konstant]]
+*Italian: [[costante]] ''m'' & ''f''
 
 ====Derived words====
 *[[constancy]]
@@ -20,10 +20,10 @@
 #(''Algebra'') a constant [[quantity]]
 
 ====Translations====
-
-*[[French]]: constant ''m''
-*[[German]]: [[Konstante]] ''f''
-*[[Italian]]: [[costante]] ''f''
+*Finnish: [[vakio]]
+*French: constant ''m''
+*German: [[Konstante]] ''f''
+*Italian: [[costante]] ''f''
 
 ----
 
@@ -32,9 +32,9 @@
 ===Adjective===
 '''constant'''
 
-*[[English]]: constant
+# constant
 
 ===Noun===
 '''constant''' ''m''
 
-*[[English]]: constant
+# constant
