--- a/wiki/aurora.wikitext
+++ b/wiki/aurora.wikitext
@@ -1,9 +1,31 @@
 ==English==
 ===Noun===
-#An atmospheric phenomenon created by [[charge]]d [[particle]]s from the sun striking the upper [[atmosphere]], creating colored [[light]]s in the sky.  It is usually named austrealis or borealis based on whether it is in the southern or northern hemispheres respectively.
+
+#An atmospheric phenomenon created by [[charge]]d [[particle]]s from the sun striking the upper [[atmosphere]], creating coloured [[light]]s in the sky. It is usually named austrealis or borealis based on whether it is in the southern or northern hemispheres respectively.
 
 ====Translations====
 *Finnish: [[revontulet]] ''pl''
+
+===Proper noun===
+
+# Roman goddess
+
+----
+
+==Italian==
+===Noun===
+'''aurora''' ''f''
+
+# [[dawn]], [[sunrise]]
+# aurora
+
+====Related terms====
+*[[aurorale]]
+
+===Proper noun===
+'''Aurora''' ''f''
+
+# female given name
 
 ----
 
@@ -12,6 +34,7 @@
 '''aurora''' ''f'' ''[[Wiktionary Appendix:Latin first declension|1st declension]]''
 
 #[[dawn]], [[sunrise]]
+
 ===Derived Terms===
 *[[aurora australis]]
 *[[aurora borealis]]
