--- a/wiki/temporary.wikitext
+++ b/wiki/temporary.wikitext
@@ -5,5 +5,8 @@ From Latin ''temporarius'' from ''tempus'' meaning "time"
 ===Adjective===
 #For a limited [[time]], [[ephemeral]], not [[constant]]
 
+====Translations====
+*Finnish: [[väliaikainen]] (1), [[ohimenevä]] (1), [[hetkellinen]] (1)
+
 ===Noun===
 #One serving for a limited time
