+fi <stock exchange#66677>

--- a/wiki/stock_exchange.wikitext
+++ b/wiki/stock_exchange.wikitext
@@ -1,3 +1,6 @@
 ==English==
 ===Noun===
 #A [[building]] and the associated organization that [[trade]]s [[stocks]] in of [[companies]] for money and vice versa.
+
+====Translations====
+*Finnish: [[pörssi]]
