declension corrected, usage notes <kuka#66581>

--- a/wiki/kuka.wikitext
+++ b/wiki/kuka.wikitext
@@ -20,7 +20,7 @@ From the pronoun stem ''ku-'' + the suffix ''-ka/kä''.
 *(''whoever''): kuka [[tahansa]], [[ken#Finnish|ken]]
 
 ===Declension===
-Cases are formed from the pronoun ''ken''. The nominative plural has a colloquial form ''kutka'', and, in spoken language, several singular cases can be shortened by using just '''en''' as the stem, eg. ''kenelle'' -> ''kelle'' 
+*Cases are formed from the pronoun ''ken''. The nominative plural has a colloquial form ''kutka'', and, in spoken language, several of the singular cases can be shortened by dropping '''en''' from the stem, eg. ''kenelle'' -> ''kelle''. 
 
 <table border="1">
 <tr><th>&nbsp;</th><th>''singular''</th><th>''plural''</th></tr>
@@ -37,5 +37,8 @@ Cases are formed from the pronoun ''ken''. The nominative plural has a colloquia
 <tr><td>''ablative''</td>   <td>keneltä</td><td>keiltä</td></tr>
 <tr><td>''allative''</td>   <td>kenelle</td><td>keille</td></tr>
 </table>
+
+====Usage notes====
+*The singular forms are sometimes used colloquially instead of the actual plural forms. ''Ketä'' is particularly common for ''keitä''.
 
 [[Category:Finnish pronouns]]
