--- a/wiki/buy.wikitext
+++ b/wiki/buy.wikitext
@@ -34,7 +34,7 @@
 *[[Frisian]]: [[keapje]]
 *German: [[kaufen]]
 *[[Guarani]]: [[jogua]]
-*[[Hebrew]]: [[לקנות]] /liknot/
+*[[Hebrew]]: [[לקנות]] (liknot)
 *Indonesian: [[beli|membeli]]
 *[[Interlingua]]: [[comprar]], [[emer]]
 *Italian: [[comprare]]
@@ -42,7 +42,7 @@
 *Korean: [[사다]] (sada)
 *Latin: [[emo]]
 *Portuguese: [[comprar]]
-*[[Russian]]: [[покупать]] /pokupat'/
+*[[Russian]]: [[покупать]] (pokupat')
 *Spanish: [[comprar]]
 
 =====to accept=====
