--- a/wiki/love.wikitext
+++ b/wiki/love.wikitext
@@ -37,7 +37,7 @@
 *Japanese: [[恋する]] (こいする, koisuru), [[愛する]] (あいする, aisuru)
 *Latvian: [[mīlēt]]
 *Portuguese: [[amar]]
-*Russian: [[любить]]
+*Russian: [[любить]] (l'ub't')
 *Spanish: [[amar]], [[querer]]
 *{{sk}}: [[milovať]], [[ľúbiť]]
 *Swedish: [[älska]], [[vara kär i]]
@@ -225,7 +225,7 @@ The translations below need to be checked by native speakers and then inserted i
 *Japanese: [[恋人]] (こいびと, koibito)
 *Latvian: [[mīļais]] ''m'', [[mīļā]] ''f'', [[mīļums]] ''f'', [[mīla]] ''m'' or ''f''
 *Portuguese: [[amor#Portuguese|amor]]
-*Russian: [[любимый]] (ljubimyj) ''m'', [[любимая]] (ljubimaja) ''f''
+*Russian: [[любимый]] (l'ubimij) ''m'', [[любимая]] (l'ubima'a) ''f''
 *{{sk}}: [[láska]] ''f''
 *Swedish: [[älskling]] ''c'' 
 |}
