--- a/wiki/love.wikitext
+++ b/wiki/love.wikitext
@@ -121,7 +121,7 @@ The translations below need to be checked by native speakers and then inserted i
 *Esperanto: [[ami]]
 *Frisian: [[hâlde fan]]
 *Guarani: [[ayhu]] (ah-)
-*Hebrew: [[אהבה]] (A'ha'va)
+*Hebrew: [[לאהוב]] 
 *Indonesian: [[cinta]], [[kasih]], [[sayang]]
 *Interlingua: [[amar]]
 *Korean: [[사랑하다]] (saranghada)
