--- a/wiki/lite.wikitext
+++ b/wiki/lite.wikitext
@@ -13,7 +13,20 @@
 *[[light]]
 
 ===Translations===
-*'''Swedish:''' [[lätt-]]
+*Swedish: [[lätt-]]
+
+----
+
+==Italian==
+===Noun===
+'''lite''' ''f''
+
+# [[quarrel]]
+
+===Related terms===
+*[[litigare]]
+*[[litighio]]
+*[[litigio]]
 
 ----
 
