--- a/wiki/love.wikitext
+++ b/wiki/love.wikitext
@@ -37,7 +37,7 @@
 *Japanese: [[恋する]] (こいする, koisuru), [[愛する]] (あいする, aisuru)
 *Latvian: [[mīlēt]]
 *Portuguese: [[amar]]
-*Russian: [[любить]] (l'ub't')
+*Russian: [[любить]] (l'ubit')
 *Spanish: [[amar]], [[querer]]
 *{{sk}}: [[milovať]], [[ľúbiť]]
 *Swedish: [[älska]], [[vara kär i]]
