--- a/wiki/sport.wikitext
+++ b/wiki/sport.wikitext
@@ -1,3 +1,3 @@
-{{cleanup}}
+{{cleanup}}[[category:Entries listed for cleanup]]
 Control over a physical medium to a desired end, usualy envolving competition.
 [[Sportwetten]]
