--- a/wiki/put_in.wikitext
+++ b/wiki/put_in.wikitext
@@ -1,4 +1,7 @@
-=== Verb ===
+==English===
+===Verb===
+'''[[put]] in'''
+
 # to place inside
 #: ''Put in the key and turn it.''
 # to apply, request, or [submit]
