--- a/wiki/Pashto.wikitext
+++ b/wiki/Pashto.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 '''Pashto'''
 
-# Second official language of [[Afghanistan]] after [[Persian]], and 34% population of Afghanistan speak Pashto or Afghan language.
+# Official language of [[Afghanistan]] with [[Persian]], and 34% population of Afghanistan, 100% population of the tribal region between Pakistan and Afghanistan, 35% population of Baluchistan (Pakistan province) and 90% population of Pakhtoonkhwa (Pakistan province) speak Pashto or Afghan language.
 
 ====Alternative spellings====
 *[[Pashtu]]
