/* Alternate forms */ <Pushtu#51465>

--- a/wiki/Pushtu.wikitext
+++ b/wiki/Pushtu.wikitext
@@ -3,5 +3,6 @@ Afghan, Pashto is the national language of [[Afghanistan]] and about 62% populat
 
 ===Alternate forms===
 *[[Pakhto]]
+*[[Pashto]]
 *[[Pushto]]
 *[[Pushto]]
