--- a/wiki/Dari-Persian.wikitext
+++ b/wiki/Dari-Persian.wikitext
@@ -7,8 +7,8 @@ From the persian word در (dar) meaning court. Dari-persian means the Court-per
 #A language of the Central Iranian family spoken by up to 15,000 people (mostly Zoroastrians) in the Yezd and Kerman areas.  Also known as [[Gabri]] or [[Gabar]]
 
 ====Translations====
-*'''Chinese''':[[达里语]]
-*'''Persian''': [[فارسی دری]] (Farsi-ye Darī)
+*Chinese:[[达里语]]
+*Persian: [[فارسی دری]] (Farsi-ye Darī)
 
 ===See also===
 *[[Pashto]]
