--- a/wiki/%E7%BB%BF.wikitext
+++ b/wiki/%E7%BB%BF.wikitext
@@ -13,13 +13,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#green
+*# [[green]]
 *# chlorine
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -33,6 +33,39 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[綠]], [[緑]]
+
+===Compounds===
+*[[绿宝石]]
+*[[绿茶]]]
+*[[绿葱葱]], [[绿葱葱的]]
+*[[绿灯]]
+*[[绿地]]
+*[[绿豆]]
+*[[绿豆糕]]
+*[[绿豆汤]]
+*[[绿豆蝇]]
+*[[绿豆粥]]
+*[[绿矾]]
+*[[绿肥]]
+*[[绿肥作物]]
+*[[绿化]]
+*[[绿篱]]
+*[[绿帽子]]
+*[[绿内障]]
+*[[绿泥石]]
+*[[绿茸茸]], [[绿茸茸的]]
+*[[绿色食品]]
+*[[绿色植物]]
+*[[绿生生]], [[绿生生的]]
+*[[绿头巾]]
+*[[绿头鸭]]
+*[[绿衣使者]]
+*[[绿阴]]
+*[[绿茵]]
+*[[绿莹莹]], [[绿莹莹的]]
+*[[绿油油]], [[绿油油的]]
+*[[绿藻]]
+*[[绿洲]]
 
 * '''Other info''': 
 
