--- a/wiki/%E7%9F%AD.wikitext
+++ b/wiki/%E7%9F%AD.wikitext
@@ -11,14 +11,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#short
-*# brief
-*# deficient, lacking
-
+*#[[short]]
+*# [[brief]]
+*# [[deficient]], [[lacking]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -34,7 +33,7 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[たん]] (tan)
@@ -44,9 +43,9 @@
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
-* '''[[Hangeul]]''': 단
+* '''[[Hangeul]]''': [[단]]
 
 * '''[[Eumhun]] reading''': 
 
