/* See also */ missing kanji & hiragana <bokken#51584>

--- a/wiki/bokken.wikitext
+++ b/wiki/bokken.wikitext
@@ -19,17 +19,15 @@ From Japanese [[木剣]] (ぼっけん, bokken), ''wooden sword''.
 #a wooden [[sword]]
 
 ===See also===
-*[[boku]]
-*[[daitō]]
-*[[iaitō]]
+*[[daitō]] ([[大刀]], [[だいとう]])
 *[[katana]] ([[刀]], かたな)
 *[[ken]] ([[剣]], [[劍]], けん)
-*[[kendō]]
-*[[kodachi]]
+*[[kendō]] ([[剣道]], [[劍道]], けんどう)
+*[[kodachi]] ([[小太刀]], こだち)
 *[[saya]] ([[鞘]], [[さや]])
-*[[shinken]]
-*[[shōtō]]
-*[[tachi]]
+*[[shinken]] ([[心剣]], [[心劍]], しんけん)
+*[[shōtō]] ([[小刀]], しょうとう)
+*[[tachi]] ([[太刀]], たち)
 *[[tantō]] ([[短刀]], たんとう)
 *[[tsurugi]] ([[剣]], [[劍]], つるぎ)
-*[[wakizashi]] ([[脇差]])
+*[[wakizashi]] ([[脇差]], [[脇差し]], わきざし)
