+etym & see also; +ru <Cyrillic#66728>

--- a/wiki/Cyrillic.wikitext
+++ b/wiki/Cyrillic.wikitext
@@ -1,4 +1,6 @@
 ==English==
+===Etymology===
+Named for its inventor, [[w:Saint Cyril|Saint Cyril]]
 
 ===Adjective===
 '''Cyrillic'''
@@ -7,4 +9,11 @@
 
 ===Proper noun===
 '''Cyrillic'''
-: An alphabet used to write six natual Slavic languages ([[Belarusian]], [[Bulgarian]], [[Macedonian]], [[Russian]], [[Serbian]], and [[Ukrainian]]) and many other languages of the former Soviet Union, Asia and Eastern Europe.
+
+# An alphabet used to write six natual Slavic languages ([[Belarusian]], [[Bulgarian]], [[Macedonian]], [[Russian]], [[Serbian]], and [[Ukrainian]]) and many other languages of the former Soviet Union, Asia and Eastern Europe.
+
+====Translations====
+*Russian: [[Кириллица]] (Kirillitsa)
+
+===See also===
+*[[w:Cyrillic|Wikipedia article on Cyrillic]]
