/* Japanese [[romaji]] */ missing kanji & hiragana <ken#40161>

--- a/wiki/ken.wikitext
+++ b/wiki/ken.wikitext
@@ -31,19 +31,18 @@
 
 ====Derived terms====
 *[[bokken]] ([[木剣]], [[木劍]], ぼっけん)
-*[[kendo]]
-*[[shinken]]
+*[[kendō]] ([[剣道]], [[劍道]], けんどう)
+*[[shinken]] ([[心剣]], [[心劍]], しんけん)
 
 ===See also===
-*[[boku]]
-*[[daito]]
-*[[iaito]]
+*[[bokken]] ([[木剣]], [[木劍]], ぼっけん)
+*[[daitō]] ([[大刀]], [[だいとう]])
 *[[katana]] ([[刀]], かたな)
-*[[kodachi]]
+*[[kodachi]] ([[小太刀]], こだち)
 *[[saya]] ([[鞘]], [[さや]])
-*[[shoto]]
-*[[tachi]]
+*[[shōtō]] ([[小刀]], しょうとう)
+*[[tachi]] ([[太刀]], たち)
 *[[tantō]] ([[短刀]], たんとう)
 *[[tsurugi]] ([[剣]], [[劍]], つるぎ)
-*[[wakizashi]] ([[脇差]])
+*[[wakizashi]] ([[脇差]], [[脇差し]], わきざし)
 <!-- sources: http://www.aikiweb.com/forums/archive/index.php/t-1870.html -->
