--- a/wiki/chav.wikitext
+++ b/wiki/chav.wikitext
@@ -4,9 +4,7 @@
 
 #(''British, derogatory'') A member of the [[working class]] in the [[United Kingdom]] who is seen as [[under-educated]]; to have poor taste, especially in their choice of clothes; and to have poor social skills.
 
-
-
-
+The Scottish equivalent of Chav is '''Dobber''', with similar characteristics in all but accent.
 
 ===See also===
 *[[pikey]]
