/* See also */ missing kanji & hiragana <tantō#66555>

--- a/wiki/tant%C5%8D.wikitext
+++ b/wiki/tant%C5%8D.wikitext
@@ -6,19 +6,18 @@
 
 ===See also===
 *[[bokken]] ([[木剣]], [[木劍]], ぼっけん)
-*[[boku]]
-*[[daito]] (大刀)
+*[[daitō]] ([[大刀]], [[だいとう]])
 *[[iaito]] ([[居合刀]])
 *[[katana]] ([[刀]], かたな)
 *[[ken]] ([[剣]], [[劍]], けん)
-*[[kendo]] ([[剣道]])
+*[[kendō]] ([[剣道]], [[劍道]], けんどう)
 *[[kodachi]] ([[小太刀]], こだち)
 *[[saya]] ([[鞘]], [[さや]])
-*[[shinken]] ([[真剣]])
-*[[shoto]] ([[小刀]], しょうとう)
+*[[shinken]] ([[真剣]], [[真劍]], しんけん)
+*[[shōtō]] ([[小刀]], しょうとう)
 *[[tachi]] ([[太刀]], たち)
 *[[tsurugi]] ([[剣]], [[劍]], つるぎ)
-*[[wakizashi]] ([[脇差]])
+*[[wakizashi]] ([[脇差]], [[脇差し]], わきざし)
 
 ----
 
