--- a/wiki/%E7%9C%9E.wikitext
+++ b/wiki/%E7%9C%9E.wikitext
@@ -12,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': real, actual, true, genuine
+* '''Common Meaning''': [[real]], [[actual]], [[true]], [[genuine]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -32,7 +32,7 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[しん]] (shin)
@@ -42,9 +42,9 @@
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
-* '''[[Hangeul]]''': 진
+* '''[[Hangeul]]''': [[진]]
 
 * '''[[Eumhun]] reading''': 
 
