--- a/wiki/insurance.wikitext
+++ b/wiki/insurance.wikitext
@@ -33,3 +33,6 @@
 *[[annuity]]
 *[[float]]
 *[[workers' compensation]]
+
+===External Links===
+[http://www.insurance-quote.uk.com Insurance Quotes]
