+kyujitai spelling for literal sense - applicable to all senses? <真剣#66709>

--- a/wiki/%E7%9C%9F%E5%89%A3.wikitext
+++ b/wiki/%E7%9C%9F%E5%89%A3.wikitext
@@ -1,8 +1,8 @@
 ==Japanese==
 ===Noun===
-'''[[真]][[剣]]''' (しんけん, shinken)
+'''[[真]][[剣]]''' ([[真劍]], しんけん, shinken)
 
-# real sword
+# real [[sword]], as opposed to a wooden or blunt sword
 
 ====See also====
 *[[竹刀]] (しない)
