--- a/wiki/Cyrillic.wikitext
+++ b/wiki/Cyrillic.wikitext
@@ -13,6 +13,8 @@ Named for its inventor, [[w:Saint Cyril|Saint Cyril]]
 # An alphabet used to write six natual Slavic languages ([[Belarusian]], [[Bulgarian]], [[Macedonian]], [[Russian]], [[Serbian]], and [[Ukrainian]]) and many other languages of the former Soviet Union, Asia and Eastern Europe.
 
 ====Translations====
+*Bulgarian: [[кирилица]] ''f''
+*Polish: [[cyrylica]] ''f''
 *Russian: [[Кириллица]] (Kirillitsa)
 
 ===See also===
