--- a/wiki/boa.wikitext
+++ b/wiki/boa.wikitext
@@ -1,7 +1,6 @@
 ==English==
-
 ===Noun===
-
 '''boa'''
 
-#A genus of large American serpents, including the boa constrictor, the emperor boa of Mexico, and the chevalier boa of Peru.
+#A genus of large American [[serpent]]s, including the [[boa constrictor]], the [[emperor boa]] of Mexico, and the [[chevalier boa]] of Peru.
+# a type of [[scarf]]
