--- a/wiki/working_class.wikitext
+++ b/wiki/working_class.wikitext
@@ -2,4 +2,4 @@
 ===Noun===
 '''working class''' (''plural'' '''working classes''')
 
-#(''British, social class'') Working class defines those perceived to have a low status in society, due to their social and educational standing, economic circumstances or geographical location.
+#(''British, social class'') Working class defines those perceived to have low status in society, due to their social and educational standing, economic circumstances or geographical location.
