--- a/wiki/root.wikitext
+++ b/wiki/root.wikitext
@@ -24,23 +24,27 @@
 *(8 vulgar slang): [[screw]] (''US''), [[shag]] (''British'') - see [[WikiSaurus:sexual intercourse]]
 
 ==== Translations ====
-*Bulgarian: [[корен]] (koren)
+*Arabic: [[‎جذر|جَذْرٌ]] (džaðr) ''m''; [[‎جذور|جُذُور]] (džuðúːr) ''pl''
+*Bulgarian: [[корен]] (koren) ''m''
 *Catalan: [[arrel]] ''f''
-*Czech: [[kořen]]
+*Chinese: [[根]] (gēn)
+*Czech: [[kořen]] ''m''
 *Dutch: [[wortel]]
 *Finnish: [[juuri]]
-*French: [[racine]]
+*French: [[racine]] ''f''
 *Galician: [[raíz]]
 *German: [[Wurzel]] ''f''
+*Hebrew: [[שורש]] (šóreš) ''m''
 *Hungarian: [[gyökér]]
-*Italian: [[radice]]
+*Italian: [[radice]] ''f''
 *Japanese: [[根]] ([[ね]], ne)
+*Korean: [[뿌리]] (ppuri)
 *{{pl}}: [[korzeń]] ''m'' (1,5), [[źródło]] ''n'' (2), [[pierwiastek]] ''m'' (3,4)
 *Portuguese: [[raiz]] ''f''
-*Russian: [[корень]] (kóren') ''m''
+*Russian: [[корень]] (kóren') ''m'', [[корни]] (kórni) ''pl''; [[коренья]] (korén'ja) ''pl (roots for cooking)''
 *Slovene: [[korenina]] ''f'' (1), [[koren]] ''m'' (3,6)
 *Spanish: [[raíz]] ''f'' (with all these senses)
-*Swedish: [[rot]] (1,3,4,6), [[källa]] (2), [[nollställe]] (4)
+*Swedish: [[rot#Swedish|rot]] (1,3,4,6), [[källa]] (2), [[nollställe]] (4)
 
 ===Verb===
 '''to root''' ([[roots]], [[rooted]], [[rooting]])
