--- a/wiki/root.wikitext
+++ b/wiki/root.wikitext
@@ -33,17 +33,18 @@
 *Finnish: [[juuri]]
 *French: [[racine]] ''f''
 *Galician: [[raíz]]
-*German: [[Wurzel]] ''f''
+*German: [[Wurzel]] ''f'', [[Wurzeln]] ''pl''
 *Hebrew: [[שורש]] (šóreš) ''m''
 *Hungarian: [[gyökér]]
 *Italian: [[radice]] ''f''
 *Japanese: [[根]] ([[ね]], ne)
 *Korean: [[뿌리]] (ppuri)
+*Latin: [[radix]] ''f''
 *{{pl}}: [[korzeń]] ''m'' (1,5), [[źródło]] ''n'' (2), [[pierwiastek]] ''m'' (3,4)
 *Portuguese: [[raiz]] ''f''
 *Russian: [[корень]] (kóren') ''m'', [[корни]] (kórni) ''pl''; [[коренья]] (korén'ja) ''pl (roots for cooking)''
 *Slovene: [[korenina]] ''f'' (1), [[koren]] ''m'' (3,6)
-*Spanish: [[raíz]] ''f'' (with all these senses)
+*Spanish: [[raíz]] ''f'', [[raíces]] ''pl'' (with all these senses)
 *Swedish: [[rot#Swedish|rot]] (1,3,4,6), [[källa]] (2), [[nollställe]] (4)
 
 ===Verb===
