--- a/wiki/root.wikitext
+++ b/wiki/root.wikitext
@@ -34,6 +34,7 @@
 *French: [[racine]] ''f''
 *Galician: [[raíz]]
 *German: [[Wurzel]] ''f'', [[Wurzeln]] ''pl''
+*Greek: [[ρίζα]] (ríza) ''f''
 *Hebrew: [[שורש]] (šóreš) ''m''
 *Hungarian: [[gyökér]]
 *Italian: [[radice]] ''f''
