--- a/wiki/please.wikitext
+++ b/wiki/please.wikitext
@@ -36,7 +36,8 @@
 ====Translations====
 *{{cs}}: [[prosím]]
 *{{fj}}: [[yalo vinaka]]
-*German: [[bitte]]  *{{ja}}: [[お願い]] (onegai)
+*German: [[bitte]]  
+*{{ja}}: [[お願い]] (onegai)
 *{{no}}: [[vær så snill]], [[takk]] (?)
 *{{pl}}: [[proszę]]
 *Russian: [[пoжaлуйстa]]
