--- a/wiki/canis.wikitext
+++ b/wiki/canis.wikitext
@@ -8,6 +8,7 @@ Cognates include English [[hound]].
 '''canis, [[Wiktionary Appendix:Latin third declension|canis]]''' ''c''
 
 #a [[dog]]
+#b [[constructed language]]
 
 ===Related Words===
 *[[caninus]]
