--- a/wiki/root.wikitext
+++ b/wiki/root.wikitext
@@ -28,25 +28,36 @@
 *Bulgarian: [[корен]] (koren) ''m''
 *Catalan: [[arrel]] ''f''
 *Chinese: [[根]] (gēn)
+*Croatian: [[koren]] ''m''
 *Czech: [[kořen]] ''m''
+*Danish: [[rod#Danish|rod]]
 *Dutch: [[wortel]]
 *Finnish: [[juuri]]
 *French: [[racine]] ''f''
-*Galician: [[raíz]]
+*Galician: [[raíz]] ''f''
 *German: [[Wurzel]] ''f'', [[Wurzeln]] ''pl''
 *Greek: [[ρίζα]] (ríza) ''f''
 *Hebrew: [[שורש]] (šóreš) ''m''
 *Hungarian: [[gyökér]]
+*Icelandic: [[rót]]
+*Indonesian: [[akar]]
 *Italian: [[radice]] ''f''
 *Japanese: [[根]] ([[ね]], ne)
 *Korean: [[뿌리]] (ppuri)
 *Latin: [[radix]] ''f''
+*Norwegian: [[rot#Norwegian|rot]]
+*Occitan: [[raiç]] ''f''
 *{{pl}}: [[korzeń]] ''m'' (1,5), [[źródło]] ''n'' (2), [[pierwiastek]] ''m'' (3,4)
 *Portuguese: [[raiz]] ''f''
 *Russian: [[корень]] (kóren') ''m'', [[корни]] (kórni) ''pl''; [[коренья]] (korén'ja) ''pl (roots for cooking)''
+*Serbian: [[корен]] (koren) ''m''
 *Slovene: [[korenina]] ''f'' (1), [[koren]] ''m'' (3,6)
 *Spanish: [[raíz]] ''f'', [[raíces]] ''pl'' (with all these senses)
-*Swedish: [[rot#Swedish|rot]] (1,3,4,6), [[källa]] (2), [[nollställe]] (4)
+*Swahili: [[mzizi]], [[mizizi]] ''(noun class 4)''
+*Swedish: [[rot#Swedish|rot]] ''c'', [[rötter]] ''pl'' (1,3,4,6), [[källa]] (2), [[nollställe]] (4)
+*[[Tagalog]]: [[ugat]]
+*Turkish: [[kök]]
+*Ukrainian: [[корінь]] (kórin') ''m'', [[корені]] (koréni) ''pl''
 
 ===Verb===
 '''to root''' ([[roots]], [[rooted]], [[rooting]])
