--- a/wiki/shrub.wikitext
+++ b/wiki/shrub.wikitext
@@ -10,7 +10,7 @@
 ** From [[Old English]] [[schrob]], [[Anglo-Saxon]] [[scrob]] or [[scrobb]]
 ** Akin to [[Norwegian]] [[skrubba]] the dwarf cornel tree
 * (Liquor)
-** From [[Arabic]] [[shirb]], [[shurb]], a drink, beverage, [[French]] [[shariba]] to drink
+** From [[Arabic]] [[shirb]], [[shurb]], a drink, beverage, [[شرب]] (shariba) to drink
 ** Comparable to [[Sirup]], [[Sherbet]]
 
 ===Noun===
