/* Noun */ <flashbulb memory#66150>

--- a/wiki/flashbulb_memory.wikitext
+++ b/wiki/flashbulb_memory.wikitext
@@ -2,4 +2,4 @@
 
 '''flashbulb memory'''
 
-#A memory for a significant and extremely emotionally moment or event.
+#A memory for a significant and extremely emotional moment or event.
