--- a/wiki/Mexican_breakfast.wikitext
+++ b/wiki/Mexican_breakfast.wikitext
@@ -1,5 +1,8 @@
+{{cleanup}}
 US idiom for a breakfast consisting of "A cigarette and a glass of water" - supposedly because that is all some Mexicans can afford. The phrase, generally used in obviously derogatory metaphors and similies,is part of a theme in US slang where the adjective "Mexican" implies something substandard or pointless.
 
 ==See Also==
 *[[Mexican Standoff]]
 *[[Mexican Promotion]]
+
+{{stub}}
