--- a/wiki/%D8%AD%D8%B3%D9%86.wikitext
+++ b/wiki/%D8%AD%D8%B3%D9%86.wikitext
@@ -1,24 +1,24 @@
 ==Arabic==
 ===Verb===
-'''حَسُنَ''' (ɧásuna) ''v.i., Stem I, 3rd masc. sg. perfective''
+'''حَسُنَ''' (ħásuna) ''v.i., Stem I, 3rd masc. sg. perfective''
 
 # to be [[beautiful]]
 # to be [[good]]
 
 ===Verb===
-'''حَسَّنَ''' (ɧássana) ''v.t., Stem II, 3rd masc. sg. perfective''
+'''حَسَّنَ''' (ħássana) ''v.t., Stem II, 3rd masc. sg. perfective''
 
 # to [[improve]], to [[amend]], to [[perfect]], to [[ameliorate]], to [[better]], to [[polish]], to [[prettify]]
 
 ===Verb===
-'''أحْسَنَ''' (’aɧsána) ''v.i./v.t., Stem IV, 3rd masc. sg. perfective''
+'''أحْسَنَ''' (’aħsána) ''v.i./v.t., Stem IV, 3rd masc. sg. perfective''
 
 # to make good
 # to do well
 # to know how to use, to be able to use, to know
 
 ===Verb===
-'''تَحَسَّنَ''' (taɧássana) ''reflexive, Stem V, 3rd masc. sg. perfective''
+'''تَحَسَّنَ''' (taħássana) ''reflexive, Stem V, 3rd masc. sg. perfective''
 
 # to [[improve]]
 # to get better
@@ -26,52 +26,52 @@
 # to [[reform]]
 
 ===Verb===
-'''اِسْتَحْسَنَ''' (istáɧsana) ''v.t., Stem X, 3rd masc. sg. perfective''
+'''اِسْتَحْسَنَ''' (istáħsana) ''v.t., Stem X, 3rd masc. sg. perfective''
 
 # to think good, to approve
 
 ----
 
 ===Noun===
-'''حُسْنٌ''' (ɧúsnun, ''m''), '''حُسْنَاء''' (ɧusná’, ''f'')
+'''حُسْنٌ''' (ħúsnun, ''m''), '''حُسْنَاء''' (ħusná’, ''f'')
 
 # [[goodness]]
 # [[prettiness]], [[beauty]], [[loveliness]]
 
 
-'''حَسَنَة''' (ɧásanah, ''f'')
+'''حَسَنَة''' (ħásanah, ''f'')
 
 # [[advantage]]
 
 
-'''تَحْسِين''' (taɧsíin, ''m'')
+'''تَحْسِين''' (taħsíin, ''m'')
 
 # [[amelioration]], [[amendment]], [[betterment]], [[improvement]], [[perfection]]
 
 ----
 
 ===Adjective===
-'''حَسَن''' (ɧásan, ''m''), '''حَسَنَة''' (ɧásanah, ''f, pl'')
+'''حَسَن''' (ħásan, ''m''), '''حَسَنَة''' (ħásanah, ''f, pl'')
 
 # [[good]], [[fine]], [[well]]
 # [[pretty]], [[beautiful]], [[lovely]], [[handsome]]
 # [[okay]]!
 
 
-'''تَحْسِينِي''' (taɧsíini, ''m''), '''تَحْسِينِيَّة''' (taɧsiníyyah, ''f, pl'')
+'''تَحْسِينِي''' (taħsíini, ''m''), '''تَحْسِينِيَّة''' (taħsiníyyah, ''f, pl'')
 
 # [[amendatory]]
 
 ----
 
 ===Elative===
-'''أحْسَنُ''' (’áɧsan, ''invariable'')
+'''أحْسَنُ''' (’áħsan, ''invariable'')
 
 # [[better]], [[finer]]
 # [[prettier]], [[more beautiful]], [[lovelier]], [[more handsome]]
 
 
-'''الأحْسَنُ''' (al-’áɧsan, ''m''), '''الحُسْنَى''' (al-ɧúsna, ''f''), '''الحُسَنٌ''' (al-ɧúsanun, ''pl'')
+'''الأحْسَنُ''' (al-’áħsan, ''m''), '''الحُسْنَى''' (al-ħúsna, ''f''), '''الحُسَنٌ''' (al-ħúsanun, ''pl'')
 
 # [[best]], [[finest]]
 # [[prettiest]], [[most beautiful]], [[loveliest]], [[handsomest]]
@@ -79,6 +79,6 @@
 ----
 
 ===Adverb===
-'''حَسَنًا''' (ɧásanan)
+'''حَسَنًا''' (ħásanan)
 
 # [[well]], [[fine]], [[okay]]
