--- a/wiki/vexation.wikitext
+++ b/wiki/vexation.wikitext
@@ -1,1 +1,24 @@
-Vexation - Verb 1. The act of annoying, vexing, or irritating.
+==English==
+===Etymology===
+Latin''[[vexare]]'', [[-ation]]
+===Noun===
+'''vexation'''
+
+# The act of annoying, [[vex]]ing, or [[irritate|irritat]]ing.
+
+===Related terms===
+*[[vex]]
+*[[vexatious]]
+
+----
+
+==French==
+===Noun===
+'''vexatoin''' ''f''
+
+# [[insult]]
+
+===Related terms===
+*[[vexant]]
+*[[vexatoire]]
+*[[vexer]]
