--- a/wiki/%E7%9C%9F%E5%89%A3.wikitext
+++ b/wiki/%E7%9C%9F%E5%89%A3.wikitext
@@ -1,6 +1,6 @@
 ==Japanese==
 ===Noun===
-'''[[真]][[剣]]''' ([[真劍]], しんけん, shinken)
+'''[[真]][[剣]]''' ([[眞劍]], しんけん, shinken)
 
 # real [[sword]], as opposed to a wooden or blunt sword
 
