/* Related Words */ <canis#39096>

--- a/wiki/canis.wikitext
+++ b/wiki/canis.wikitext
@@ -10,7 +10,9 @@ Cognates include English [[hound]].
 #a [[dog]]
 #b [[constructed language]]
 
-===Related Words===
+===Related terms===
+*[[cane]]
 *[[caninus]]
 
-[[la:Canis]][[pl:Canis]]
+[[la:Canis]]
+[[pl:Canis]]
